# rustyray

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
src/materials/: mod.rs
src/objects/: mod.rs
src/primitive_types/: mod.rs
src/renderer/: camera.rs  canvas.rs  mod.rs  ray.rs
src/utils/: mod.rs
