[package]
name = "path_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = '0.23.14', default-features = false , features = ["png"]}
ndarray = {version = '0.15.3', features = ["rayon"]}
log = '0.4.14'
rayon = '1.5.1'
derive_builder = '0.10.2'
rand = '0.8.4'
indicatif = {version = "0.16.2"}
nalgebra = {version = "0.29.0", features =["rand"]}
# getset = '0.1.1'

[dev-dependencies]
env_logger = "0.9.0"

# itertools = '0.10.1'
# nshare = {version = '0.7.0', features = [ "ndarray", "nalgebra"]}
# ndarray-linalg = '0.14.1'
# ndarray-rand = '0.14.0'

